feat: show complete and incomplete items
